--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   };
 
   const playerImage = new Image();
-  playerImage.src = 'pngwing.com.png'; // 플레이어 이미지 파일의 경로를 지정하세요.
+  playerImage.src = 'pngwing.png'; // 플레이어 이미지 파일의 경로를 지정하세요.
 
   playerImage.onload = function() {
     player.radius = playerImage.width / 30; // 플레이어의 반지름 설정
