--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     y: canvas.height - 50,
     radius: 20,
     speed: 5,
-    isDragging: false,
   };
 
   const playerImage = new Image();
@@ -63,15 +62,17 @@
     obstacleRadius = obstacleImage.width / 12; // 장애물의 반지름 설정
   }
 
+  let leftKeyPressed = false;
+  let rightKeyPressed = false;
+  let upKeyPressed = false;
+  let downKeyPressed = false;
   let gameActive = false;
   let score = 0;
   let alertShown = false;
 
   document.addEventListener("keydown", handleKeyDown);
   document.addEventListener("keyup", handleKeyUp);
-  canvas.addEventListener("mousedown", handleMouseDown);
   canvas.addEventListener("mousemove", handleMouseMove);
-  canvas.addEventListener("mouseup", handleMouseUp);
 
   document.getElementById("startButton").addEventListener("click", startGame);
   document.getElementById("restartButton").addEventListener("click", restartGame);
@@ -90,35 +91,33 @@
   }
 
   function handleKeyDown(event) {
-    // Handle keyboard input if needed
+    if (event.key === "ArrowLeft") {
+      leftKeyPressed = true;
+    } else if (event.key === "ArrowRight") {
+      rightKeyPressed = true;
+    } else if (event.key === "ArrowUp") {
+      upKeyPressed = true;
+    } else if (event.key === "ArrowDown") {
+      downKeyPressed = true;
+    }
   }
 
   function handleKeyUp(event) {
-    // Handle keyboard input if needed
-  }
-
-  function handleMouseDown(event) {
-    const mouseX = event.clientX - canvas.getBoundingClientRect().left;
-    const mouseY = event.clientY - canvas.getBoundingClientRect().top;
-
-    const distance = Math.sqrt(
-      Math.pow(mouseX - player.x, 2) + Math.pow(mouseY - player.y, 2)
-    );
-
-    if (distance < player.radius) {
-      player.isDragging = true;
+    if (event.key === "ArrowLeft") {
+      leftKeyPressed = false;
+    } else if (event.key === "ArrowRight") {
+      rightKeyPressed = false;
+    } else if (event.key === "ArrowUp") {
+      upKeyPressed = false;
+    } else if (event.key === "ArrowDown") {
+      downKeyPressed = false;
     }
   }
 
   function handleMouseMove(event) {
-    if (player.isDragging) {
-      player.x = event.clientX - canvas.getBoundingClientRect().left;
-      player.y = event.clientY - canvas.getBoundingClientRect().top;
-    }
-  }
-
-  function handleMouseUp() {
-    player.isDragging = false;
+    const rect = canvas.getBoundingClientRect();
+    player.x = event.clientX - rect.left;
+    player.y = event.clientY - rect.top;
   }
 
   function drawPlayer() {
@@ -146,7 +145,21 @@
       return;
     }
 
-    // Add other game logic as needed
+    if (leftKeyPressed && player.x - player.radius > 0) {
+      player.x -= player.speed;
+    }
+
+    if (rightKeyPressed && player.x + player.radius < canvas.width) {
+      player.x += player.speed;
+    }
+
+    if (upKeyPressed && player.y - player.radius > 0) {
+      player.y -= player.speed;
+    }
+
+    if (downKeyPressed && player.y + player.radius < canvas.height) {
+      player.y += player.speed;
+    }
 
     if (Math.random() < 0.02) {
       const obstacle = {
